aws_inspection_vpc/main.tf
locals {
    public_subnet_index = 0
}
locals {
    gwlbe_subnet_index = 1
}
locals {
    private_subnet_index = 2
}
locals {
    natgw_subnet_index = 3
}
locals {
    management_subnet_index = 4
}
locals {
    subnet_index_addon_for_natgw = var.enable_nat_gateway ? 1 : 0
}
locals {
    subnet_index_addon_for_management = var.enable_dedicated_management_eni ? 1 : 0
}
locals {
  subnet_index_add_natgw_mgmt = local.management_subnet_index + 1
}
locals {
  rfc1918_192 = "192.168.0.0/16"
}
locals {
  rfc1918_10 = "10.0.0.0/8"
}
locals {
  rfc1918_172 = "172.16.0.0/12"
}
locals {
  public_subnet_cidr_az1 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.public_subnet_index)
}
locals {
  public_subnet_cidr_az2 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.public_subnet_index +
                                                                     local.subnet_index_add_natgw_mgmt)
}
locals {
  public_subnet_cidr_az3 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.public_subnet_index +
                                                                     2 * local.subnet_index_add_natgw_mgmt)
}
locals {
  gwlbe_subnet_cidr_az1 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.gwlbe_subnet_index)
}
locals {
  gwlbe_subnet_cidr_az2 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.gwlbe_subnet_index +
                                                                    local.subnet_index_add_natgw_mgmt)
}
locals {
  gwlbe_subnet_cidr_az3 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.gwlbe_subnet_index +
                                                                    2 * local.subnet_index_add_natgw_mgmt)
}
locals {
  private_subnet_cidr_az1 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.private_subnet_index)
}
locals {
  private_subnet_cidr_az2 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.private_subnet_index +
                                                                      local.subnet_index_add_natgw_mgmt)
}
locals {
  private_subnet_cidr_az3 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.private_subnet_index +
                                                                      2 * local.subnet_index_add_natgw_mgmt)
}
locals {
  natgw_subnet_cidr_az1 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.natgw_subnet_index)
}
locals {
  natgw_subnet_cidr_az2 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.natgw_subnet_index +
                                                                    local.subnet_index_add_natgw_mgmt)
}
locals {
  natgw_subnet_cidr_az3 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.natgw_subnet_index +
                                                                    2 * local.subnet_index_add_natgw_mgmt)
}
locals {
  management_subnet_cidr_az1 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.management_subnet_index)
}
locals {
  management_subnet_cidr_az2 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.management_subnet_index +
                                                                    local.subnet_index_add_natgw_mgmt)
}
locals {
  management_subnet_cidr_az3 = cidrsubnet(var.vpc_cidr, var.subnet_bits, local.management_subnet_index +
                                                                    2 * local.subnet_index_add_natgw_mgmt)
}
data "aws_ec2_transit_gateway" "tgw" {
  count = var.enable_tgw_attachment ? 1 : 0
  filter {
    name   = "tag:Name"
    values = [var.named_tgw]
  }
  filter {
    name   = "state"
    values = ["available"]
  }
}
module "vpc" {
  source = "git::https://github.com/40netse/terraform-modules.git//aws_vpc"
  vpc_name                   = "${var.vpc_name}-vpc"
  vpc_cidr                   = var.vpc_cidr
  tags                       = var.tags
}
#
# Default route table that is created with the main VPC.
#
resource "aws_default_route_table" "route_inspection" {
  default_route_table_id = module.vpc.vpc_main_route_table_id
  tags = merge({ Name = "default table for ${var.vpc_name} (unused)" }, var.tags)
}
module "vpc-igw" {
  source = "git::https://github.com/40netse/terraform-modules.git//aws_igw"
  igw_name                   = "${var.vpc_name}-igw"
  vpc_id                     = module.vpc.vpc_id
  tags                       = var.tags
}
module "igw-route-table" {
  source  = "git::https://github.com/40netse/terraform-modules.git//aws_route_table"
  rt_name = "${var.vpc_name}-igw-rt"

  vpc_id  = module.vpc.vpc_id
  tags    = var.tags
}
resource "aws_route_table_association" "b" {
  gateway_id     = module.vpc-igw.igw_id
  route_table_id = module.igw-route-table.id
}

#
# Security VPC Transit Gateway Attachment, Route Table and Routes
#
module "vpc-transit-gateway-attachment" {
  source                         = "git::https://github.com/40netse/terraform-modules.git//aws_tgw_attachment"
  count                          = var.enable_tgw_attachment  ? 1 : 0
  tgw_attachment_name            = "${var.vpc_name}-tgw-attachment"

  transit_gateway_id                              = data.aws_ec2_transit_gateway.tgw[0].id
  subnet_ids                                      = var.availability_zone_3 != "" ? [ module.subnet-private-az1.id, module.subnet-private-az2.id, module.subnet-private-az3[0].id ] : [ module.subnet-private-az1.id, module.subnet-private-az2.id ]
  transit_gateway_default_route_table_propogation = "true"
  appliance_mode_support                          = "enable"
  vpc_id                                          = module.vpc.vpc_id
  tags                                            = var.tags
}

resource "aws_ec2_transit_gateway_route_table" "inspection" {
  count                           = var.enable_tgw_attachment ? 1 : 0
  transit_gateway_id              = data.aws_ec2_transit_gateway.tgw[0].id
  tags = merge({ Name = "${var.vpc_name}-VPC TGW Route Table" }, var.tags)
}

resource "aws_ec2_transit_gateway_route_table_association" "inspection" {
  count                          = var.enable_tgw_attachment ? 1 : 0
  transit_gateway_attachment_id  = module.vpc-transit-gateway-attachment[0].tgw_attachment_id
  transit_gateway_route_table_id = aws_ec2_transit_gateway_route_table.inspection[0].id
}
